@startuml

interface RequestContextFactory {
    createRequestContext()
}

class DefaultRequestContextFactory {
    createRequestContext()
}

class UserImplementedSSF {
    createRequestContext()
}
RequestContextFactory <|-- DefaultRequestContextFactory
RequestContextFactory <|-- UserImplementedSSF
@enduml